fix: dropdown 컨텐츠가 overflow 될 때만 스크롤 생성

--- a/src/common/components/FieldGroup/Dropdown/Dropdown.module.scss
+++ b/src/common/components/FieldGroup/Dropdown/Dropdown.module.scss
@@ -17,7 +17,7 @@ $option-height: 6rem;
     border: none;
     width: 100%;
     margin-top: 0.8rem;
-    overflow: scroll;
+    overflow: auto;
     background: none;
     border-radius: 0.6rem;
     box-shadow: 0rem 0.4rem 2.5rem 0rem rgba(0, 0, 0, 0.1);
